--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: npm run build -- --base=/EasyCRM/
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
